<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".KetQuaActivity">
    <TextView
        android:id="@+id/t"
        android:textSize="30dp"
        android:textColor="@color/colorBlack"
        android:padding="10dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_ketqua"/>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp"
        android:elevation="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/app_caudung"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tvCauDung"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

    </LinearLayout>
    <LinearLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:text="@string/app_causai"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:id="@+id/tvCauSai"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:text="@string/app_cauchuatraloi"
            android:layout_width="0dp"
            android:layout_weight="2.7"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:id="@+id/tvchualam"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:text="@string/app_diem"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:id="@+id/tvTongdiem"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>
    </LinearLayout>
    </android.support.v7.widget.CardView>
    <LinearLayout
        android:paddingTop="20dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:background="@drawable/boder_button"
            android:textColor="@color/colorWhite"
            android:text="@string/app_lamlai"
            android:onClick="LamLai"
            android:layout_width="120dp"
            android:layout_height="wrap_content" />
        <Button
            android:layout_marginTop="10dp"
            android:background="@drawable/boder_button"
            android:textColor="@color/colorWhite"
            android:text="@string/app_luudiem"
            android:onClick="LuuDiem"
            android:layout_width="120dp"
            android:layout_height="wrap_content" />
        <Button
            android:layout_marginTop="10dp"
            android:background="@drawable/boder_button"
            android:textColor="@color/colorWhite"
            android:text="@string/app_thoat"
            android:onClick="Thoat"
            android:layout_width="120dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>